# docs/swagger.json
@@ -182,7 +182,7 @@
             }
         },
         "/application/search/email": {
-            "get": {
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -194,13 +194,16 @@
                 "tags": [
                     "application"
                 ],
-                "summary": "查看待添加好友",
+                "summary": "搜索邮箱查看待添加好友",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "按邮箱搜索",
-                        "name": "username",
-                        "in": "query"
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.FindPerson"
+                        }
                     }
                 ],
                 "responses": {
@@ -337,14 +340,72 @@
                 }
             }
         },
-        "/chat/unread": {
-            "get": {
+        "/chat/show/all": {
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "展示侧边栏私聊情况",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chat"
+                ],
+                "summary": "展示所有未被删除的聊天框（侧边框）",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Contact"
+                        }
+                    }
+                }
+            }
+        },
+        "/contact/change/remark": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Contact"
+                ],
+                "summary": "修改朋友备注",
+                "parameters": [
+                    {
+                        "description": "修改备注请求",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.FriendRemark"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/contact/friend/main": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -352,14 +413,49 @@
                     "application/json"
                 ],
                 "tags": [
-                    "chat"
+                    "Contact"
                 ],
-                "summary": "私聊",
+                "summary": "查看朋友详细信息",
+                "parameters": [
+                    {
+                        "description": "查看请求",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.FriendMain"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ContactResponse"
+                            "$ref": "#/definitions/models.ContactMain"
+                        }
+                    }
+                }
+            }
+        },
+        "/contact/list": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Contact"
+                ],
+                "summary": "查看通讯录",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Contact"
                         }
                     }
                 }
@@ -810,17 +906,43 @@
                 }
             }
         },
-        "models.ContactResponse": {
+        "models.Contact": {
             "type": "object",
             "properties": {
                 "error": {
                     "type": "string"
                 },
-                "friend": {
+                "list": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.MainFriend"
+                        "$ref": "#/definitions/models.ListContact"
                     }
+                }
+            }
+        },
+        "models.ContactMain": {
+            "type": "object",
+            "properties": {
+                "friend-picture": {
+                    "type": "string"
+                },
+                "friend_email": {
+                    "type": "string"
+                },
+                "friend_id": {
+                    "type": "integer"
+                },
+                "friend_name": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "integer"
+                },
+                "remark": {
+                    "type": "string"
+                },
+                "signature": {
+                    "type": "string"
                 }
             }
         },
@@ -894,6 +1016,33 @@
                 }
             }
         },
+        "models.FindPerson": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.FriendMain": {
+            "type": "object",
+            "properties": {
+                "friend_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.FriendRemark": {
+            "type": "object",
+            "properties": {
+                "friend_id": {
+                    "type": "integer"
+                },
+                "remark": {
+                    "type": "string"
+                }
+            }
+        },
         "models.HistoryMsg": {
             "type": "object",
             "required": [
@@ -943,6 +1092,26 @@
                 }
             }
         },
+        "models.ListContact": {
+            "type": "object",
+            "properties": {
+                "friend_id": {
+                    "type": "integer"
+                },
+                "friend_name": {
+                    "type": "string"
+                },
+                "friend_picture": {
+                    "type": "string"
+                },
+                "remark": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.LoginResponse": {
             "type": "object",
             "properties": {
@@ -969,20 +1138,6 @@
                 },
                 "password": {
                     "type": "string"
-                }
-            }
-        },
-        "models.MainFriend": {
-            "type": "object",
-            "properties": {
-                "friend_id": {
-                    "type": "integer"
-                },
-                "last_msg_time": {
-                    "type": "string"
-                },
-                "unread": {
-                    "type": "integer"
                 }
             }
         },
